[project]
name = "pcapchu-scripts"
version = "0.1.0"
description = "Pcap analysis data layer: Zeek log ingestion into DuckDB with SQL query interface"
readme = "README.md"
authors = [
    { name = "Hugo", email = "77865234+zenyanle@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
]

[project.scripts]
pcapchu-scripts = "pcapchu_scripts.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
